fix(parent): fix maven surefire plugin config
Fixed crashing maven surefire plugin configuration.

Co-authored by: Kasper